WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168677
REGRESSION (203941): iAd Producer: Clicking buttons in Preview does not work
https://bugs.webkit.org/show_bug.cgi?id=168677
Summary
REGRESSION (203941): iAd Producer: Clicking buttons in Preview does not work
Chris Dumez
Reported
2017-02-21 14:41:05 PST
REGRESSION (203941): iAd Producer: Clicking buttons in Preview does not work
Attachments
Patch
(7.71 KB, patch)
2017-02-21 14:47 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-02-21 14:41:30 PST
<
rdar://problem/30640101
>
Chris Dumez
Comment 2
2017-02-21 14:47:48 PST
Created
attachment 302312
[details]
Patch
Chris Dumez
Comment 3
2017-02-21 15:27:36 PST
Comment on
attachment 302312
[details]
Patch Clearing flags on attachment: 302312 Committed
r212773
: <
http://trac.webkit.org/changeset/212773
>
Chris Dumez
Comment 4
2017-02-21 15:27:43 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug