REGRESSION (203941): iAd Producer: Clicking buttons in Preview does not work https://bugs.webkit.org/show_bug.cgi?id=168677 <rdar://problem/30640101>

Reviewed by Ryosuke Niwa.

Add quirk to initMouseEvent to unbreak iAd Producer.

* dom/MouseEvent.cpp:
(WebCore::MouseEvent::initMouseEventQuirk):
* dom/MouseEvent.h:
* dom/MouseEvent.idl:
* platform/RuntimeApplicationChecks.h:
* platform/RuntimeApplicationChecks.mm:
(WebCore::MacApplication::isIADProducer):

Canonical link: https://commits.webkit.org/185687@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212773 268f45cc-cd09-0410-ab3c-d52691b4dbfc