Source/WebCore/platform/RuntimeApplicationChecks.h
@@ -52,6 +52,7 @@ WEBCORE_EXPORT bool isSafari();
 bool isSolidStateNetworksDownloader();
 WEBCORE_EXPORT bool isVersions();
 WEBCORE_EXPORT bool isHRBlock();
+WEBCORE_EXPORT bool isIAdProducer();
 
 } // MacApplication
 
